# ghost

./: .cursorrules  .env.backup  .gitignore  ARQUITECTURA_SIMPLIFICACION.md  DEVELOPMENT_GUIDELINES.md  FINAL_AUDIT_REPORT.md  IMPLEMENTATION_SUCCESS.md  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  Makefile  PROGRESS.md  README.md  TIMEFRAMES_AUDIT_FINDINGS.md  Trunk.toml  junior.md  prompt.md
.github/workflows/: quality-check.yml
backend/: .env  .env.example  Cargo.toml
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/handlers/: mod.rs
backend/src/middleware/: mod.rs
backend/tests/: integration_test.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs  styles.css
frontend/src/api/: mod.rs  timeframes.rs
frontend/src/components/: api_status_card.rs  asset_analysis_card.rs  info_card.rs  layout.rs  mod.rs  multi_temporal_analyzer.rs  simple_health_status_card.rs  simple_providers_status_card.rs  simple_system_metrics_card.rs  system_metrics_card.rs  timeframe_selector.rs
frontend/src/components/common/: mod.rs
frontend/src/config/: mod.rs
frontend/src/domain/: analysis_types.rs  mappers.rs  mod.rs  simple_types.rs  types.rs
frontend/src/routes/: asset.rs  dashboard.rs  mod.rs  route.rs  simple_api_status.rs
frontend/src/services/: analysis_api.rs  api.rs  mod.rs  simple_api.rs
frontend/src/stores/: portfolio.rs
frontend/src/utils/: errors.rs  format.rs  mod.rs
scripts/: pre-commit.sh
