[package]
name = "ghost-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "Event", "EventTarget"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
